--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "bootstrap-vue-3": "^0.5.1",
+    "bootstrap-vue-3": "^0.3.12",
+    "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-loader": "^17.3.1",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
@@ -20,7 +22,9 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "^3.4.26",
+    "babel-jest": "^30.0.0-alpha.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
