--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "webpack-dev-server --inline --content-base . --history-api-fallback",
     "serve": "vue-cli-service serve --port 80",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -10,11 +11,9 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "bootstrap-vue-3": "^0.3.12",
-    "connect-history-api-fallback": "^2.0.0",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-loader": "^17.3.1",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
@@ -22,9 +21,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "^5.0.8",
-    "@vue/compiler-sfc": "^3.4.26",
-    "babel-jest": "^30.0.0-alpha.3",
+    "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
