modified:   kidwiz/build.gradle 	new file:   kidwiz/src/main/java/com/kidwiz/web/DTO/CareerTestDTO.java 	new file:   kidwiz/src/main/java/com/kidwiz/web/DTO/CareerTestResultDTO.java 	new file:   kidwiz/src/main/java/com/kidwiz/web/controller/CareerTestController.java 	modified:   kidwiz/src/main/java/com/kidwiz/web/cors/WebConfig.java 	new file:   kidwiz/src/main/java/com/kidwiz/web/repository/CareerTestRepository.java 	new file:   kidwiz/src/main/java/com/kidwiz/web/repository/CareerTestResultRepository.java 	new file:   kidwiz/src/main/java/com/kidwiz/web/service/CareernetApiService.java 	modified:   kidwiz/src/main/resources/static/mapper/vue-mapper.xml 	new file:   vue_kidwiz/src/components/CareerTest.js 	modified:   vue_kidwiz/src/components/MenuPage.vue 	modified:   vue_kidwiz/src/router/index.js 	new file:   vue_kidwiz/src/views/CareerTest.vue 	modified:   vue_kidwiz/src/views/PersonTest.vue 	modified:   vue_kidwiz/src/views/insertTest.vue

--- a/kidwiz/build.gradle
+++ b/kidwiz/build.gradle
@@ -33,6 +33,13 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
 	implementation	'org.json:json:20230227'
+	// CareerNet Open API Java SDK 추가
+    // implementation 'kr.co.career:careernet-openapi-java-sdk:VERSION'
+    
+    
+    // build.gradle
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    
 }
 
 tasks.named('test') {
