--- a/kidwiz/build.gradle
+++ b/kidwiz/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
 	id 'war'
-	id 'org.springframework.boot' version '3.2.5'
+	id 'org.springframework.boot' version '3.2.3'
 	id 'io.spring.dependency-management' version '1.1.4'
 }
 
@@ -24,25 +24,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	compileOnly 'org.projectlombok:lombok'
+	implementation	'org.json:json:20230227'
+ 	//implementation 'org.hibernate:hibernate-core:6.1.7.Final'
+ 	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+ 	
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
-	implementation	'org.json:json:20230227'
-	// CareerNet Open API Java SDK 추가
-    // implementation 'kr.co.career:careernet-openapi-java-sdk:VERSION'
-    
-
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    
-    // build.gradle
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    
+	
 }
 
 tasks.named('test') {
