--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -13,7 +13,8 @@
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue3-datepicker": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
