--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -33,7 +33,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.7.1"
+    "eslint-plugin-vue": "^8.7.1",
+    "sass-loader": "^10.5.2"
   },
   "eslintConfig": {
     "root": true,
