--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -12,6 +12,8 @@
     "@fullcalendar/common": "^5.11.5",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@fullcalendar/vue3": "^6.1.11",
     "@vue/cli": "^5.0.8",
     "axios": "^1.6.8",
@@ -19,6 +21,7 @@
     "bootstrap-vue-3": "^0.5.1",
     "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
+    "fullcalendar": "^6.1.11",
     "moment": "^2.30.1",
     "vue": "^3.2.13",
     "vue-awesome-swiper": "^5.0.1",
