--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -36,10 +36,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^9.0.0",
     "sass": "^1.77.0",
-    "sass-loader": "^14.2.1"
+    "sass-loader": "^14.2.1",
     "eslint-plugin-vue": "^8.7.1"
   },
   "eslintConfig": {
