--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/vue3": "^6.1.11",
     "@vue/cli": "^5.0.8",
+    "@vuepic/vue-datepicker": "^8.5.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
