--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -3,43 +3,52 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --inline --content-base . --history-api-fallback",
     "serve": "vue-cli-service serve --port 80",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vite build",
+    "lint": "vue-cli-service lint",
+    "dev": "vite",
+    "start": "webpack-dev-server --inline --content-base . --history-api-fallback"
   },
   "dependencies": {
     "@fullcalendar/common": "^5.11.5",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/vue3": "^6.1.11",
+    "@mdi/font": "5.9.55",
     "@vue/cli": "^5.0.8",
     "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
     "clean-stack": "^5.2.0",
-    "delegates": "^1.0.0",
-    "humanize-ms": "^1.2.1",
     "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
+    "delegates": "^1.0.0",
+    "humanize-ms": "^1.2.1",
     "moment": "^2.30.1",
+    "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-awesome-swiper": "^5.0.1",
     "vue-loader": "^17.3.1",
     "vue-router": "^4.3.2",
-    "vue3-datepicker": "^0.4.0"
+    "vue3-datepicker": "^0.4.0",
+    "vuetify": "npm:@vuetify/nightly@next",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vitejs/plugin-vue": "^3.0.3",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.7.1",
     "node-sass": "^9.0.0",
     "sass": "^1.77.0",
     "sass-loader": "^14.2.1",
-    "eslint-plugin-vue": "^8.7.1"
+    "vite": "^3.0.8",
+    "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "vue-cli-plugin-vuetify": "~2.5.8"
   },
   "eslintConfig": {
     "root": true,
