--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/common": "^5.11.5",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/vue3": "^6.1.11",
     "@vue/cli": "^5.0.8",
     "@vuepic/vue-datepicker": "^8.5.1",
