--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -38,11 +38,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.7.1",
-    "sass-loader": "^10.5.2"
+    "sass-loader": "^10.5.2",
     "node-sass": "^9.0.0",
-    "sass": "^1.77.0",
-    "sass-loader": "^14.2.1",
-    "eslint-plugin-vue": "^8.7.1"
+    "sass": "^1.77.0"
   },
   "eslintConfig": {
     "root": true,
