--- a/kidwiz/build.gradle
+++ b/kidwiz/build.gradle
@@ -38,8 +38,8 @@ dependencies {
 	// implementation 'org.springframework.boot:spring-boot-starter-security'
 	// jwt 추가
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test') {
