--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -18,16 +18,17 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
     "clean-stack": "^5.2.0",
-    "delegates": "^1.0.0",
-    "humanize-ms": "^1.2.1",
     "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
+    "delegates": "^1.0.0",
+    "humanize-ms": "^1.2.1",
     "moment": "^2.30.1",
     "vue": "^3.2.13",
     "vue-awesome-swiper": "^5.0.1",
     "vue-loader": "^17.3.1",
     "vue-router": "^4.3.2",
-    "vue3-datepicker": "^0.4.0"
+    "vue3-datepicker": "^0.4.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -36,10 +37,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.7.1",
     "node-sass": "^9.0.0",
     "sass": "^1.77.0",
-    "sass-loader": "^14.2.1",
-    "eslint-plugin-vue": "^8.7.1"
+    "sass-loader": "^14.2.1"
   },
   "eslintConfig": {
     "root": true,
