--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -8,6 +8,7 @@
     "start": "webpack-dev-server --inline --content-base . --history-api-fallback"
   },
   "dependencies": {
+    "@creative-tim-official/argon-dashboard-free": "^1.2.0",
     "@fullcalendar/common": "^5.11.5",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
@@ -59,7 +60,7 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "vue/multi-word-component-names" : 0
+      "vue/multi-word-component-names": 0
     }
   },
   "browserslist": [
