--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -19,6 +19,7 @@
     "@vuepic/vue-datepicker": "^8.5.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "bootstrap-vue-3": "^0.5.1",
     "clean-stack": "^5.2.0",
     "connect-history-api-fallback": "^2.0.0",
