--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -33,6 +33,7 @@
     "vue-loader": "^17.3.1",
     "vue-router": "^4.0.13",
     "vue3-datepicker": "^0.4.0",
+    "vue3-naver-maps": "^4.2.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
