getter, setter 추가, 채용정보 api

--- a/kidwiz/build.gradle
+++ b/kidwiz/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-compileJava {
-    options.compilerArgs << "-parameters"
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-parameters'
 }
