--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -17,6 +17,7 @@
     "@mdi/font": "5.9.55",
     "@vue/cli": "^5.0.8",
     "@vuepic/vue-datepicker": "^8.5.1",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -28,6 +29,7 @@
     "delegates": "^1.0.0",
     "humanize-ms": "^1.2.1",
     "moment": "^2.30.1",
+    "quill": "^2.0.2",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-awesome-swiper": "^5.0.1",
