--- a/kidwiz/build.gradle
+++ b/kidwiz/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 	
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
 	
+	implementation 'org.jsoup:jsoup:1.14.3'
 }
 
 tasks.named('test') {
