--- a/vue_kidwiz/package.json
+++ b/vue_kidwiz/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve --port 80",
     "lint": "vue-cli-service lint",
-    "start": "webpack-dev-server --inline --content-base . --history-api-fallback"
+    "start": "webpack-dev-server --inline --content-base . --history-api-fallback",
+    "build": "webpack"
   },
   "dependencies": {
     "@creative-tim-official/argon-dashboard-free": "^1.2.0",
@@ -38,7 +39,8 @@
     "vue-wordcloud": "^1.1.1",
     "vue3-datepicker": "^0.4.0",
     "vue3-naver-maps": "^4.2.0",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "webpack": "^5.91.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -51,7 +53,8 @@
     "eslint-plugin-vue": "^8.7.1",
     "node-sass": "^9.0.0",
     "sass": "^1.77.0",
-    "sass-loader": "^14.2.1"
+    "sass-loader": "^14.2.1",
+    "webpack-cli": "^5.1.4"
   },
   "eslintConfig": {
     "root": true,
